--- a/components/Layout/Layout.module.css
+++ b/components/Layout/Layout.module.css
@@ -22,6 +22,10 @@
   display: flex;
 }
 
+.nav-links > li:hover {
+  color: rgba(120, 2, 6, 1);
+}
+
 .nav-links > li {
   margin-left: 20px;
   cursor: pointer;
@@ -38,10 +42,9 @@
   width: 100%;
   height: 100%;
   flex: 1;
-  display: flex;
-  justify-content: center;
   color: #fff;
   position: relative;
+  margin: 0 auto;
 }
 
 .main::before {
@@ -53,6 +56,7 @@
     ),
     url("/main_splash.jpg");
   background-size: cover;
+  background-position: fixed;
   position: absolute;
   top: 0px;
   right: 0px;
