--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,8 +12,28 @@ a {
   text-decoration: none;
 }
 
+ul {
+  margin: 0;
+  padding: 0;
+}
+
 li {
   list-style: none;
+}
+
+label {
+  display: block;
+}
+
+input {
+  line-height: 2px;
+  font-size: 14px;
+  border-radius: 10px;
+  height: 30px;
+  border: none;
+  padding-left: 5px;
+  padding-right: 5px;
+  margin: 5px 0;
 }
 
 *,
