--- a/pages/new-program/new-program.module.css
+++ b/pages/new-program/new-program.module.css
@@ -3,7 +3,7 @@
   width: 100%;
   max-width: 1100px;
   display: grid;
-  grid-template-columns: 200px 1fr;
+  grid-template-columns: 300px 1fr;
   gap: 15px;
 }
 
@@ -16,11 +16,78 @@
   padding: 10px 15px;
 }
 
-.exercise-list li:last-child {
+.checkbox {
+  cursor: pointer;
+  display: inline-flex;
+  position: relative;
+}
+
+.checkbox > input {
+  appearance: none;
+  height: 25px;
+  width: 25px;
+  border: 1px solid #fff;
+  border-radius: 4px;
+  outline: none;
+  transition-duration: 0.3s;
+  background-color: #000;
+  cursor: pointer;
+}
+
+.checkbox > input:checked + div::before {
+  content: "\2713";
+  font-size: 30px;
+  display: block;
+  text-align: center;
+  color: #41b883;
+  position: absolute;
+  left: -1.7rem;
+  top: -0.3rem;
+}
+
+.checkbox > input + div {
+  margin-left: 8px;
+}
+
+.exercise-list span:last-child {
+  display: block;
   margin-bottom: 15px;
   font-size: 11px;
 }
 
 .exercise-form {
   padding: 10px 15px;
+}
+
+.program-exercise-info {
+  display: flex;
+  width: 100%;
+  flex-flow: row wrap;
+  margin-bottom: 15px;
+}
+
+.program-exercise-info > span {
+  display: block;
+  width: 100%;
+}
+
+.program-exercise-info > div:last-child {
+  margin-left: 15px;
+}
+
+.sets-container,
+.reps-container {
+  display: flex;
+  align-items: center;
+  font-size: 11px;
+}
+
+.sets-container > label + input,
+.reps-container > label + input {
+  margin-left: 8px;
+}
+
+.sets-input,
+.reps-input {
+  width: 60px;
 }
