--- a/pages/new-program/new-program.module.css
+++ b/pages/new-program/new-program.module.css
@@ -145,4 +145,9 @@
   padding: 10px 8px;
   cursor: pointer;
   letter-spacing: 1.5px;
+  font-family: inherit;
+}
+
+.btn:hover {
+  background-color: #2c835c;
 }
