--- a/pages/new-program/new-program.module.css
+++ b/pages/new-program/new-program.module.css
@@ -110,6 +110,10 @@
   margin-bottom: 15px;
 }
 
+.program-exercise-info:last-child {
+  margin-bottom: 35px;
+}
+
 .program-exercise-info > span {
   display: block;
   width: 100%;
@@ -150,4 +154,65 @@
 
 .btn:hover {
   background-color: #2c835c;
+}
+
+.loading-container {
+  margin: 65px auto;
+  width: 100%;
+  max-width: 800px;
+  background-color: #000;
+  opacity: 0.85;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 500px;
+}
+
+.loader {
+  position: relative;
+  display: inline-block;
+  width: 50px;
+  height: 20px;
+  vertical-align: middle;
+}
+
+.loader-bars:before,
+.loader-bars:after,
+.loader-bars span {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 10px;
+  height: 20px;
+  background-color: #fff;
+  animation: grow 1.5s linear infinite;
+}
+
+.loader-bars:after {
+  left: 12px;
+  animation: grow 1.5s linear -0.5s infinite;
+}
+
+.loader-bars span {
+  left: 25px;
+  animation: grow 1.5s linear -1s infinite;
+}
+
+@keyframes grow {
+  0% {
+    transform: scaleY(0);
+    opacity: 0;
+  }
+
+  50% {
+    transform: scaleY(1);
+    opacity: 1;
+  }
+
+  100% {
+    transform: scaleY(0);
+    opacity: 0;
+  }
 }
