--- a/pages/programs/programs.module.css
+++ b/pages/programs/programs.module.css
@@ -8,8 +8,29 @@
   gap: 15px;
 }
 
-.container > div {
+.container > .program-item {
+  cursor: pointer;
   background-color: #000;
   border-radius: 10px;
   opacity: 0.85;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: program 0.5s calc(var(--i) * 0.1s) ease-in-out both;
+}
+
+.program-item:hover {
+  border: 3px solid #fff;
+  opacity: 0.8;
+}
+
+@keyframes program {
+  0% {
+    opacity: 0;
+    transform: scale(0.8);
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
